# posix-runtime

./: CMakeLists.txt
cmake/: compile_bitcode_library.cmake
include/posix-runtime/: engine_api.h.cmin
include/posix-runtime/Config/: Version.h  config.h.cmin
runtime/: CMakeLists.txt
runtime/POSIX/: fd.c  fd.h  fd_32.c  fd_64.c  fd_init.c  illegal.c  klee_init_env.c  misc.c  selinux.c  stubs.c
